# macro-replacer

./: .gitattributes  .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml  replace_ram.py
.github/: copilot-instructions.md
.github/workflows/: build.yml
inspector/: CMakeLists.txt  Makefile  README.md  build.sh
inspector/src/: main.cpp
nix/: overlay.nix
nix/modules/devShells/: default.nix
nix/modules/treefmt/: default.nix
nix/pkgs/: inspector.nix  replacer.nix
src/macro_replacer/: replacer.py
tests/integration/: test_runner.py
tests/integration/test_cases/case1/: new_macro.v  top_module.sv
tests/integration/test_cases/case2/: new_macro.v  top.sv
