[project]
name = "macro-replacer"
version = "0.1.0"
description = "A small utility to replace macro/module instantiations in Verilog/SystemVerilog source files."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
replacer = "macro_replacer.replacer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"